Added results of control work for NFT_251BC_Python_1900_ru.

--- a/Урок 51-52. Самостоятельная работа/Python - PT52 - answer.html
+++ b/Урок 51-52. Самостоятельная работа/Python - PT52 - answer.html
@@ -48,7 +48,7 @@
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">SOME ANSWER</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -99,7 +99,7 @@ else:
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -191,7 +191,7 @@ if bool(acc_online) == False:
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -272,7 +272,7 @@ if delivery == "3":
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -341,7 +341,7 @@ for word in words:
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -396,7 +396,7 @@ while i < len(some_list):
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -430,7 +430,7 @@ for i in range(1, len(some_list), 2):
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -472,7 +472,7 @@ print(result)</code></pre>
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -515,7 +515,7 @@ print(found_index)</code></pre>
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -562,7 +562,7 @@ print(some_list[len(some_list) - 1])</code></pre>
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -606,7 +606,7 @@ print(some_list[len(some_list) - 1])</code></pre>
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -662,7 +662,7 @@ print(some_list[len(some_list) - 1])</code></pre>
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -713,7 +713,7 @@ if index == INDEX_NOT_FOUND:
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -805,7 +805,7 @@ print("Завершение программы.")</code></pre>
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -841,7 +841,7 @@ print("Завершение программы.")</code></pre>
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
@@ -917,7 +917,7 @@ print("Завершение программы.")</code></pre>
                                 clip-rule="evenodd"></path>
                         </svg>
                         Copy code</button>
-                    <pre><code class="python">Какой-то текст</code></pre>
+                    <pre><code class="python">Отсутствует.</code></pre>
                 </div>
                 <h3>Верный ответ:</h3>
                 <div class="console">
