--- a/Урок 07-09. Введение в Python/Python - HW08.html
+++ b/Урок 07-09. Введение в Python/Python - HW08.html
@@ -103,7 +103,7 @@ to be</code></pre>
         <div class="console">
           <pre><code>Введите рост: <span class="input">180</span>
 
-Оптимальный вес (кг): 80</code></pre>
+Оптимальный вес (кг): 80.0</code></pre>
         </div>
       </div>
       <div class="right-rect">
@@ -128,7 +128,25 @@ to be</code></pre>
             class="hl-text">выводит в консоль количество полных лет</span>, <span class="hl-text">дней</span>, <span
             class="hl-text">часов</span>, <span class="hl-text">минут</span> и <span class="hl-text">секунд</span>.
           Считайте, что в году <code class="python"><b>365</b></code> дней.</p>
-        <h3>Пример работы в консоли:</h3>
+        <h3>Примеры работы в консоли:</h3>
+        <div class="console">
+          <pre><code>Введите количество секунд: <span class="input">59</span>
+        
+Лет: 0
+Дней: 0
+Часов: 0
+Минут: 0
+Секунд: 59</code></pre>
+        </div>
+        <div class="console">
+          <pre><code>Введите количество секунд: <span class="input">65</span>
+                
+Лет: 0
+Дней: 0
+Часов: 0
+Минут: 1
+Секунд: 5</code></pre>
+        </div>
         <div class="console">
           <pre><code>Введите количество секунд: <span class="input">31719845</span>
 
