--- a/Урок 10-14. Операторы ветвлений/Python - HW10.html
+++ b/Урок 10-14. Операторы ветвлений/Python - HW10.html
@@ -169,29 +169,23 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 10.7</h2>
-        <p>Напишите конвертер валют. Программа <span class="hl-text">выводит в консоль меню с выбором исходной
-            валюты</span>, затем <span class="hl-text">запрашивает ввод с консоли выбора</span>. После этого программа
-          <span class="hl-text">выводит в консоль меню с выбором целевой валюты</span>, затем <span
-            class="hl-text">запрашивает ввод с консоли выбора</span>. Дальше программа <span class="hl-text">выводит в
-            консоль что во что будет конвертироваться</span> и <span class="hl-text">курс конвертации</span>, а дальше
-          <span class="hl-text">запрашивает с консоли сумму для конвертации</span>. Затем программа <span
-            class="hl-text">выводит в консоль сумму конвертированной валюты</span>.
+        <p>Напишите простой конвертер валют из AZN. Программа <span class="hl-text">выводит в консоль меню с выбором
+            целевой валюты</span>, затем <span class="hl-text">запрашивает ввод с консоли выбора</span>. Дальше
+          программа <span class="hl-text">выводит в консоль что во что будет конвертироваться</span> и <span
+            class="hl-text">курс конвертации</span>, а дальше <span class="hl-text">запрашивает с консоли сумму для
+            конвертации</span>. Затем программа <span class="hl-text">выводит в консоль сумму конвертированной
+            валюты</span>.
         </p>
         <p>В начале программы создайте <code class="python"><b>3</b></code> переменные, которые будут хранить курсы
           конвертации – <code class="python"><b>AZN -> RUB</b></code>, <code class="python"><b>AZN -> USD</b></code>,
-          <code class="python"><b>RUB -> USD</b></code>. Задайте им любой курс и используйте их в программе.
+          <code class="python"><b>AZN -> TRY</b></code>. Задайте им любой курс и используйте их в программе.
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
-          <pre><code>1. AZN
-2. RUB
-3. USD
-Выберите исходную валюту: <span class="input">1</span>
-=========================================
-1. AZN
-2. RUB
-3. USD
-Выберите целевую валюту: <span class="input">2</span>
+          <pre><code>1. RUB
+2. USD
+3. TRY
+Выберите целевую валюту: <span class="input">1</span>
 =========================================
 AZN -> RUB
 Курс: 54.40
