--- a/Урок 10-14. Операторы ветвлений/Python - HW12.html
+++ b/Урок 10-14. Операторы ветвлений/Python - HW12.html
@@ -32,20 +32,20 @@
         </p>
         <p>Категории следующие:
         <ul>
-          <li><span class="hl-text"><b>"A":</b></span> более <code class="python"><b>90</b></code> баллов.</li>
-          <li><span class="hl-text"><b>"B":</b></span> От <code class="python"><b>80</b></code> до <code
-              class="python"><b>90</b></code> баллов включительно.
+          <li><span class="hl-text"><b>"A":</b></span> от <code class="python"><b>90</b></code> баллов и выше.</li>
+          <li><span class="hl-text"><b>"B":</b></span> от <code class="python"><b>80</b></code> до <code
+              class="python"><b>90</b></code> баллов.
           </li>
-          <li><span class="hl-text"><b>"C":</b></span> От <code class="python"><b>70</b></code> до <code
-              class="python"><b>80</b></code> баллов включительно.
+          <li><span class="hl-text"><b>"C":</b></span> от <code class="python"><b>70</b></code> до <code
+              class="python"><b>80</b></code> баллов.
           </li>
-          <li><span class="hl-text"><b>"D":</b></span> От <code class="python"><b>60</b></code> до <code
-              class="python"><b>70</b></code> баллов включительно.
+          <li><span class="hl-text"><b>"D":</b></span> от <code class="python"><b>60</b></code> до <code
+              class="python"><b>70</b></code> баллов.
           </li>
-          <li><span class="hl-text"><b>"E":</b></span> От <code class="python"><b>50</b></code> до <code
+          <li><span class="hl-text"><b>"E":</b></span> от <code class="python"><b>50</b></code> до <code
               class="python"><b>60</b></code> баллов.
           </li>
-          <li><span class="hl-text"><b>"F":</b></span> Менее <code class="python"><b>50</b></code> баллов.</li>
+          <li><span class="hl-text"><b>"F":</b></span> менее <code class="python"><b>50</b></code> баллов.</li>
         </ul>
         </p>
         <h3>Пример работы в консоли:</h3>
@@ -194,14 +194,13 @@ else:
           вероятности дождя и выводит в консоль словесную интерпретацию.</p>
         <p>Интерпретация следующая:
         <ul>
-          <li><span class="hl-text"><b>Низкая вероятность:</b></span> до <code class="python"><b>30%</b></code>
-            включительно.
+          <li><span class="hl-text"><b>Низкая вероятность:</b></span> до <code class="python"><b>30%</b></code>.
           </li>
           <li><span class="hl-text"><b>Умеренная вероятность:</b></span> от <code class="python"><b>30%</b></code> до
-            <code class="python"><b>60%</b></code> включительно.
+            <code class="python"><b>60%</b></code>.
           </li>
           <li><span class="hl-text"><b>Высокая вероятность:</b></span> от <code class="python"><b>60%</b></code> до
-            <code class="python"><b>80%</b></code> включительно.
+            <code class="python"><b>80%</b></code>.
           </li>
           <li><span class="hl-text"><b>Очень высокая вероятность:</b></span> от <code class="python"><b>80%</b></code> и
             выше.
