--- a/Урок 15-20. Циклы/Python - HW18.html
+++ b/Урок 15-20. Циклы/Python - HW18.html
@@ -20,7 +20,8 @@
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
         <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройдено
-          до этого урока включительно. Задания выполняйте при помощи цикла <code class="python"><b>for</b></code>. Не
+          до этого урока включительно. Задания выполняйте при помощи цикла <code class="python"><b>for</b></code>, если
+          только в задаче не говорится явно об использовании цикла <code class="python"><b>while</b></code>. Не
           используйте в условии оператор <code class="python"><b>in</b></code>.</p>
       </div>
       <div class="right-rect">
@@ -146,6 +147,8 @@
             class="hl-text">Teston Lebra</span> решил найти все числа, которые принесут ему купон. Напишите программу,
           которая <span class="hl-text">запрашивает с консоли начальное число</span> и <span class="hl-text">конечное
             число</span>, а затем <span class="hl-text">выводит в консоль все числа палиндромы</span>.</p>
+        <p>Получение палиндрома можете взять из решения <span class="hl-text">ДЗ 16.6</span>, где используется цикл
+          <code class="python"><b>while</b></code>.</p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">90</span>
