--- a/Урок 15-20. Циклы/Python - PT16.html
+++ b/Урок 15-20. Циклы/Python - PT16.html
@@ -69,7 +69,7 @@
           <li>Цифра <code class="python"><b>0</b></code> считается <span class="hl-text">началом новой команды</span>.
             Если встречается цифра <code class="python"><b>0</b></code>, то <span class="hl-text">счётчик команд
               увеличивается на</span> <code class="python"><b>1</b></code> и <span class="hl-text">выводится</span>
-            <code class="python"><b>"Выполнение"</b></span></code>.. Счётчик <span class="hl-text">выводится в
+            <code class="python"><b>"Выполнение"</b></span></code>. Счётчик <span class="hl-text">выводится в
               конце</span>.
           </li>
           <li>Цифры <code class="python"><b>2</b></code>, <code class="python"><b>3</b></code> просто <span
