--- a/Урок 21-27. Строки. Списки/Python - HW24.html
+++ b/Урок 21-27. Строки. Списки/Python - HW24.html
@@ -41,7 +41,7 @@
         <h2>Домашнее Задание 24.2</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
             class="hl-text">выводит в консоль количество слов в строке</span>. Словом является набор символов <span
-            class="hl-text">разделённые пробелами</span>.</p>
+            class="hl-text">разделённые пробелами</span>. Не использовать другие коллекции.</p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abc abc     abc</span>
