--- a/Урок 21-27. Строки. Списки/Python - HW26.html
+++ b/Урок 21-27. Строки. Списки/Python - HW26.html
@@ -41,7 +41,7 @@
           <li><span class="hl-text">Медиана</span> – это число, слева и справа от которого равное количество чисел из
             выборки.</li>
           <li>Для определения медианы сперва используйте метод списка <code class="python"><b>sort()</b></code>, чтобы
-            отсортировать список. Затем следуйте следующим условиям:
+            отсортировать список. Затем следуйте условиям:
             <br>— Если количество элементов в списке <span class="hl-text">чётное</span>, то нужно поделить количество
             на <code class="python"><b>2</b></code>, взять число по полученному индексу и взять число на единицу меньше
             полученного индекса, сложить их и поделить на <code class="python"><b>2</b></code>.<br>Например:
