--- a/Урок 21-27. Строки. Списки/Python - PT25.html
+++ b/Урок 21-27. Строки. Списки/Python - PT25.html
@@ -20,20 +20,22 @@
       <div class="right-rect">
         <h2>Практическое Задание 25.1</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли температуры в одной строке</span> и
-          <span class="hl-text">выводит в консоль среднее значение</span>.
+          <span class="hl-text">выводит в консоль среднее значение</span> и <span class="hl-text">список из введённых
+            температур</span>.
         </p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите температуры через пробел: <span class="input">25 26 30 29 30</span>
 
-Средняя температура: 28</code></pre>
+Средняя температура: 28.0
+Введённые температуры: 25 26 30 29 30</code></pre>
         </div>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 25.2</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли оценки до тех пор, пока не введут
             пустую строку</span>. Затем программа <span class="hl-text">формирует список</span> и <span
-            class="hl-text">выводит в консоль минимальную оценку</span>.</p>
+            class="hl-text">выводит в консоль минимальную оценку</span> и список оценок.</p>
         <h3>Пример работы в консоли:</h3>
         <div class="console">
           <pre><code>Введите оценку (1): <span class="input">12</span>
@@ -43,7 +45,8 @@
 Введите оценку (5): <span class="input">11</span>
 Введите оценку (6): 
 
-Минимальная оценка: 10</code></pre>
+Минимальная оценка: 10
+Введённые оценки: 12 11 12 10 11</code></pre>
         </div>
       </div>
       <div class="right-rect">
