--- a/Урок 28-34. Функции. Модули/Python - HW34.html
+++ b/Урок 28-34. Функции. Модули/Python - HW34.html
@@ -305,7 +305,7 @@
                       соответственно заменяются на данные копии</span> и <span class="hl-text">возвращает</span> <code
                       class="python"><b>True</b></code>.</li>
                   <li>В противном случае <span class="hl-text">возвращает</span> <code
-                      class="python"><b>True</b></code>.</li>
+                      class="python"><b>False</b></code>.</li>
                 </ul>
               </li>
             </ul>
@@ -322,7 +322,6 @@
         <ul>
           <li>Программа <span class="hl-text">запрашивает с консоли фамилию</span> и <span class="hl-text">имя</span>.
           </li>
-          <li>По идентификатору <span class="hl-text">удаляет студента из списка студентов</span>.</li>
           <li>Выводит <span class="hl-text">в консоль всех найденных студентов в виде</span>:
             <div class="console">
               <pre><code>{идентификатор} {фамилия} {имя} - {оценка} {оценка} {оценка} ...
@@ -352,8 +351,7 @@
           <li>Результат <span class="hl-text">сообщает в консоли</span>.</li>
           <li>Реализуйте через функцию <span class="function"><b>calculate_avg</b></span>:
             <ul>
-              <li>Функция принимает <span class="hl-text">список студентов</span> и <span
-                  class="hl-text">идентификатор</span>.</li>
+              <li>Функция принимает <span class="hl-text">студента</span>.</li>
               <li>Если список оценок не пустой, то <span class="hl-text">вычисляет среднюю оценку студента</span>.</li>
               <li>В противном случае <span class="hl-text">результат равен нулю</span>.</li>
               <li>Возвращает полученный результат.</li>
