--- a/Урок 28-34. Функции. Модули/Python - PT28.html
+++ b/Урок 28-34. Функции. Модули/Python - PT28.html
@@ -39,8 +39,9 @@
       <div class="right-rect">
         <h2>Практическое Задание 28.4</h2>
         <p>Напишите функцию <span class="function"><b>get_list</b></span>, которая на вход <span
-            class="hl-text">принимает начало</span> и <span class="hl-text">конец диапазона</span>, затем <span
-            class="hl-text">возвращает список</span>.</p>
+            class="hl-text">принимает начало</span> и <span class="hl-text">конец диапазона</span>, <span
+            class="hl-text">формирует список чисел по диапазону с шагом</span> <code class="python"><b>1</b></code>,
+          затем <span class="hl-text">возвращает список</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 28.5</h2>
