--- a/Урок 28-34. Функции. Модули/Python - PT31.html
+++ b/Урок 28-34. Функции. Модули/Python - PT31.html
@@ -107,7 +107,7 @@
 
         <p>Выбран <span class="hl-text">пункт 6</span>:
         <ul>
-          <li>Программа <span class="hl-text">выводит в консоль минимальную температуру</span>.</li>
+          <li>Программа <span class="hl-text">выводит в консоль среднюю температуру</span>.</li>
           <li>Реализуйте через функцию <span class="function"><b>get_avg_temperature</b></span>:
             <ul>
               <li>Функция <span class="hl-text">принимает список температур</span>.</li>
